--- a/.github/workflows/job_application.yml
+++ b/.github/workflows/job_application.yml
@@ -17,9 +17,16 @@ jobs:
         with:
           python-version: '3.9'
 
-      - name: Install Dependencies
+      - name: Install System Dependencies
         run: |
+         sudo apt-get update
+         sudo apt-get install -y unzip wget
+
+      - name: Install Python Dependencies
+        run: |
+          python -m pip install --upgrade pip
           pip install selenium pandas smtplib requests webdriver-manager python-docx
+
 
       - name: Run Job Application Bot
         env:
