--- a/.github/workflows/job_application.yml
+++ b/.github/workflows/job_application.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Install Python Dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install selenium pandas smtplib requests webdriver-manager python-docx
+          pip install selenium pandas requests webdriver-manager python-docx
 
 
       - name: Run Job Application Bot
