--- a/.github/workflows/job_application.yml
+++ b/.github/workflows/job_application.yml
@@ -16,7 +16,7 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: '3.9'
-
+          
       - name: Install System Dependencies
         run: |
          sudo apt-get update
@@ -24,13 +24,14 @@ jobs:
 
       - name: Install Python Dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install selenium pandas smtplib requests webdriver-manager python-docx
+         python -m pip install --upgrade pip
+         pip install selenium pandas requests webdriver-manager python-docx
 
-
-      - name: Run Job Application Bot
-        env:
-          GMAIL_USER: ${{ secrets.GMAIL_USER }}
-          GMAIL_PASSWORD: ${{ secrets.GMAIL_PASSWORD }}
-          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+      - name: Run Job Application Bot and Save CSV
         run: python job_application_bot.py
+
+      - name: Upload Job Applications CSV to GitHub
+        uses: actions/upload-artifact@v2
+        with:
+         name: applied_jobs
+         path: applied_jobs.csv
